--- a/src/style/popuppage.css
+++ b/src/style/popuppage.css
@@ -13,6 +13,7 @@
 
 .m-dialog-modal {
     position: fixed;
+    display: none;
     top: 0;
     left: 0;
     right: 0;
@@ -181,4 +182,8 @@ strong {
 
 .m-dialog-footer-right {
     display: flex;
+}
+
+.isShow {
+    display: block !important;
 }
